<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".backup.BackupDictionaryFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/global_margin_vertical"
        android:hint="@string/ed_label_dico"
        app:helperText="@string/ed_label_dico_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_target_dico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginBottom="@dimen/global_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ed_label_src"
        app:helperText="@string/ed_label_src_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_translation_src"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginBottom="@dimen/global_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ed_label_dest"
        app:helperText="@string/ed_label_dest_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_translation_dest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_url"
        android:gravity="center"
        android:layout_marginBottom="@dimen/global_margin_vertical"
        android:drawableStart="@drawable/ic_web"
        android:layout_width="wrap_content"
        android:text="@string/error_no_url"
        android:layout_height="wrap_content"/>

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/btn_save"
        app:icon = "@drawable/ic_save"
        />

</LinearLayout>