<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="preferences" type="java.util.HashMap" />
    </data>

    <ScrollView
        android:scrollbars="none"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/PreferenceTiTle"
                android:text="@string/pref_title_global"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/PreferenceInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pref_hint_user_name"
                app:helperText="@string/pref_helper_user_name"
                android:gravity="center_vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:gravity="center"
                    android:id="@+id/ed_pref_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/search_bar_inverted" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/PreferenceTiTle"
                android:text="@string/pref_title_quiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/PreferenceInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pref_hint_quiz_words"
                app:helperText="@string/pref_helper_quiz_words"
                android:gravity="center_vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:gravity="center"
                    android:id="@+id/ed_pref_quiz_words"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@color/search_bar_inverted" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerInsetStart="20dp"
                app:dividerInsetEnd="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/PreferenceInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pref_hint_quiz_frequency"
                app:helperText="@string/pref_helper_quiz_frequency"
                android:gravity="center_vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:gravity="center"
                    android:id="@+id/ed_pref_quiz_frequency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@color/search_bar_inverted" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerInsetStart="20dp"
                app:dividerInsetEnd="20dp"/>
            
            <LinearLayout
                android:layout_marginHorizontal="@dimen/global_margin_horizontal"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_of_days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/global_margin_horizontal"
                    android:layout_marginRight="@dimen/global_margin_horizontal"
                    app:layoutManager="LinearLayoutManager"
                    tools:listitem="@layout/settings_day"
                    tools:itemCount="7"
                    tools:context=".settings.SettingsFragment" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/pref_helper_days"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                style="@style/PreferenceTiTle"
                android:text="@string/pref_title_clean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_cln_words"
                style="@style/PreferenceButton"
                app:icon="@drawable/ic_clear"
                android:text="@string/pref_btn_cln_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_marginBottom="20dp"
                android:id="@+id/btn_cln_dicos"
                style="@style/PreferenceButton"
                app:icon="@drawable/ic_clear"
                android:text="@string/pref_btn_cln_dicos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</layout>
