<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_background"
    android:paddingVertical="@dimen/global_margin_vertical"
    android:paddingHorizontal="@dimen/global_margin_horizontal"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="20sp"
        android:textColor="@color/u_paris"
        android:textStyle="bold"
        android:text="@string/pref_dialog_languages_title"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/dialog_content"
        android:text="@string/pref_dialog_languages_content"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_marginHorizontal="@dimen/global_margin_horizontal"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/radio_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_1"
                style="@style/PreferenceRadioButton"
                android:checked="true"
                android:text="@string/pref_all_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RadioGroup>

    </ScrollView>
    
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginEnd="15dp"
            style="@style/ButtonIconAppearance"
            android:id="@+id/btn_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/choose"
            app:icon = "@drawable/ic_save"
            app:iconSize= "20sp"
            />

        <Button
            style="@style/ButtonIconAppearance"
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/cancel"
            app:icon = "@drawable/ic_close"
            app:iconSize= "20sp"
            />
    </LinearLayout>

</LinearLayout>