<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_background"
    android:paddingVertical="@dimen/global_margin_vertical"
    android:paddingHorizontal="@dimen/global_margin_horizontal"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="20sp"
        android:textColor="@color/u_paris"
        android:textStyle="bold"
        android:text="@string/dialog_search_title"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/dialog_search_message"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/search_dialog_margin"
        android:layout_height="wrap_content"/>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/global_margin_horizontal"
        android:layout_marginVertical="@dimen/global_margin_vertical"
        android:gravity="center_vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_translation_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/search_bar_inverted"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/ButtonIconAppearance"
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/dialog_search_button"
        app:icon = "@drawable/ic_google_search"
        app:iconSize= "20sp"
        />

</LinearLayout>