<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import  type="fr.uparis.zobonomo.dictionaryapplication.utils.Util" />
        <variable name="prefix" type="String" />
        <variable name="word" type="fr.uparis.zobonomo.dictionaryapplication.database.Word" />
    </data>
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:backgroundTint="@color/blue"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

            <LinearLayout
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginRight="15dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_languages" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@{Util.capitalize(word.translation)}"
                    android:textColor="@color/u_paris"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/destination_prefix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:textSize="10sp"
                        android:text="@string/destination"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/destination"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{Util.capitalize(word.destination)}"
                        android:maxLines="1"
                        android:textColor="@color/u_paris"
                        android:textSize="13sp" />
                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerInsetStart="16dp"
                app:dividerInsetEnd="16dp"/>

            <ImageButton
                android:id="@+id/btn_down_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@color/transparent"
                android:padding="0dp"
                android:src="@drawable/ic_dropdown"
                app:tint="@android:color/darker_gray" />


        <LinearLayout
            android:visibility="gone"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/dropdown_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_marginBottom="5dp"
                android:id="@+id/btn_visualize"
                style="@style/ButtonWordAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visualize"
                app:icon="@drawable/ic_eye" />


            <Button
                android:id="@+id/btn_quiz"
                app:icon="@drawable/ic_quiz"
                style="@style/ButtonWordAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz" />

        </LinearLayout>



    </LinearLayout>
</layout>
